Fix Detail bad contrast of Edit-Caption

--- a/ui/branding/semantic-ui/less/branding.less
+++ b/ui/branding/semantic-ui/less/branding.less
@@ -24,3 +24,7 @@
     color: @primaryRed;
   }
 }
+
+.white {
+  color: white;
+}
